<resources>
    <string name="app_name">Expandable List 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cloughaneely_stone_activity">cloughaneely_stone_activity</string>
    <string name="cloughaneely_stone_heading">Cloughaneely Stone</string>
    <string name="cloughaneely_stone_text">\nThe stone which gives the parish of Cloughaneely its name was an inauguration stone named after a local chieftain, Ceann Fhaoladh. The name Ceann Fhaoladh is a very common old Irish personal name. It is based on the words ceann, meaning head and faol, meaning wolf. \n\nThe pillar was erected in 1774, by Wybrants Olphert, the local landlord. The stone, weighing 1500kg, was set on top of the pillar with the help of sailors who sailed into Ballyness Bay aboard a man-of-war, using a system of spars, winches and tackle.\n\nAccording to folklore, Balor of the Evil Eye, a Fomorian giant living on Tory Island,  beheaded Ceann Fhaoladh on this stone after hearing of his plans to kill him. A red stain, said to be Ceann Fhaoladh\'s blood can be seen on the white stone. Ceann Fhaoladh\'s son Lugh later avenged his death by thrusting a red hot spear through Balor\'s evil eye. </string>
    <string name="cloughaneely_stone_heading_ga">Cloch Cheann Fhaola</string>
    <string name="cloughaneely_stone_text_ga">\nBhí Cloch Cheann Fhaoladh ina chloch óiriúnaithe ainmnithe i ndiaidh taoiseach áitiúil, Ceann Fhaoladh. Bhí an t-ainm sin coitianta sa cheantar ag an am. Ciallaíonn faol cú nó mac tíre.\n\nThóg Wybrants Olphert an colún sa bhliain 1774 agus fuair sé cuidiú ó mairneálaigh a sheol isteach go Cé Bhaile an Easa. Bhain siad úsáid as an trealamh a bhí acu ar an long leis an chloch (meachán 1500 cileagram) a thógáil suas ar an cholún.\n\nDe réir an tseanchais steall Balor an cloigeann de Ceann Fhaoladh ar an chloch. Deirtear go bhfuil fuil Cheann Fhaoladh le feiceáil go fóill ar an chloch. Bhain mac Ceann Fhaoladh, Lugh, díoltas amach nuair a mharaigh sé é trí bhior the a shá tríd a shúil nimhe. </string>
    <string name="title_activity_tullaghobegley_layout">tullaghobegley_layout</string>
    <string name="tullaghobegley_heading">Tullaghobegley Graveyard</string>
    <string name="tullaghobegley_text">\nTullaghobegley graveyard is said to be the oldest Christian burial ground of its size, in Northwest Donegal. The first church on this site is believed to have been established in the sixth century by Saint Begley. The graveyard served the parishes of Cloughaneely and Gweedore. Funerals from Gweedore came on a fifteen mile route across the mountains.\n\nAn interesting tomb, dating from penal times is that of Father Terence Craig, who was killed by English bloodhounds at Loch Altan in 1710. The slab on his grave had carvings of bloodhounds, as well as a chalice, to commemorate the manner in which he died. </string>
    <string name="tullaghobegley_heading_ga">Reilig Thulacha Beaglaíoch</string>
    <string name="tullaghobegley_text_ga">\n\nDeirtear gurb é reilig Thulacha Bheigile an reilig is sine in Iarthuaisceart Dhún na nGall. Bhí sé in úsáid ag muintir Ghaoth Dobhair chomh maith. Thiocfadh an tórramh as Gaoth Dobhair ar thuras 15 míle thar an chnoic.\n\nTá tuama an tSagairt Terence Craig ar cheann de na tuamaí is suimiúla sa reilig. Maraíodh é in aice le Loch Altan sa bhliain 1710. Tháinig cúanna na gCótaí Dearga air agus steall siad as a chéile é. Gearradh íomha de trí chú ar leac na h-uaighe, chomh maith le cailís, i gcuimhne ar an dóigh a maraíodh é.</string>
    <string name="title_activity_activity_ballyconnell_house">activity_ballyconnell_house</string>
    <string name="ballyconnell_heading">Ballyconnell House</string>
    <string name="ballyconnell_text">\n\nBallyconnell House was built around 1763 by the Olpherts, a family of Dutch
landowners. It is set in a wooded park of around 500 acres. Wybrants Olphert
bought the property from Captain Henry Harte who was granted lands in
Cloughaneely for his loyalty to the Crown during the Ulster Plantation. \n

In 1921 the house was occupied by the Irish Free State Army and later purchased
by the Irish Land Commission. The property was transferred to the Loreto nuns,
who added a new chapel, classrooms, and dormitories, and it became Coláiste
Bhríde, a preparatory college for girls. \n
In 1965 is was purchased by the Diocese of Raphoe and became Holy Cross
College, a boarding school for boys. It was used as a residence for boarding
students until 1986. Údarás na Gaeltachta bought the estate in 1987.
\n
The Olphert motto \"Dum Spiro Spero\" is still legible over the front door.</string>
    <string name="ballyconnell_text_ga">\n\nThóg teaghlach na Olpherts Teach Bhaile Chonaill sa bhliain 1763. Tá sé suite i measc na crainn ar suíomh 500 acra. Cheannaigh Wybrants Olphert an talamh ón Chaptaen Henry Harte a fuair an talamh le linn Plandáil Uladh.

\nD\'úsáid airm an tSaorstáit an teach mar Bheairic sa bhliain 1921. Cheannaigh an rialtas an áit sa bhliain 1926 agus bhronn siad ar an Ord Loreto é le coláiste traenála do mhúinteoirí a bhunú ann, Coláiste Bhríde. Cheannaigh deoise Ráth Bhóth é i 1965 agus bhunaigh siad Coláiste na Croise Naofa ann. Cheannaigh Údarás na Gaeltachta an áit sa bhliain 1987 ar mhaithe leis an phobal.

\nTá mana na hOilfeartaigh, \“Dum Spiro Spero\” le feiceáil go fóill os cionn an dorais..</string>
    <string name="ray_church_heading">Ray Church</string>
    <string name="ray_church_text">\nThis extraordinary 5.5m high cross stands inside the ruins of Ray Church. It was found broken in the graveyard, then rebuilt and erected inside the church walls for protection. Because the cross has no decorations or carvings, it\'s not possible to date it but it is very similar to the late 8th century St John\’s Cross on Iona. A number of abbots of Iona in the 7th century came from this area of Donegal. \n\nRay Church was rebuilt or repaired some time after 1622 and the graveyard contains gravestones dating back to the 18th century. \n\nThere is a local legendary story which explains how this cross came to be at Ray:- \n\nColmcille had travelled from the mainland to Tory Island with his two companions Saints Fionán and Begley. Once they arrived on the island, Colmcille realised that he had left his prayer book on the mainland. He asked his companions if one of them would return to find the prayer book. Whoever returned would be given anything he desired. St Fionán went back to the mainland and found an eagle sheltering the prayer book from the rain with his wing. Fionán took the prayer book back to Tory and asked for the Ray cross in return. Colmcille is said to have been displeased but kept his promise by granting Fionán his wish.</string>
    <string name="ray_church_text_ga">\n\nSeasann an chros ard iontach seo 5.5 méadar ar airde i bhfothrach Eaglais Ráithe. Thángthas uirthi sa reilig taobh amuigh den eaglais agus í briste. Rinneadh í a atógáil agus cuireadh isteach san eaglais í lena cosaint. Toisc nach bhfuil aon mhaisiúchán ar an chros ní féidir dáta a lua léi ach tá sí an-chosúil ina himlíne le Cros Naomh Eoin ar Oileán Í ón 8ú haois dhéanach. B’as an chuid seo de Thír Chonaill roinnt ab de chuid Oileán Í sa 7ú haois.\n\nRinneadh Eaglais Ráithe a atógáil nó a athchóiriú am éigin i ndiaidh 1622 agus tá leaca uaighe sa reilig ón 18ú haois.\n\nDeir an bhéaloideas:\n\nBhí Colmcille i ndiaidh dul anonn ón mhórthír go hOileán Thoraí lena bheirt chomrádaithe – Naomh Fionán agus Naomh Beaglaoch. Ar theacht i dtír ar an oileán dóibh, tuigeadh do Cholmcille gur fhág sé a leabhar urnaí ar an mhórthír. D’fhiafraigh sé dá chomrádaithe an rachadh duine acu ar ais leis an leabhar urnaí a fháil. An té a rachadh ar ais is amhlaidh a gheobhadh sé a rogha mian. Naomh Fionán a d’fhill ar an mhórthír agus cad é a bhí roimhe ach iolar agus é ag tabhairt dídine ón fhearthainn don leabhar faoina sciathán. Thug Fionán an leabhar urnaí ar ais go Toraigh gur iarr Cros Ráithe mar chúiteamh. Deirtear nach mó ná sásta a bhí Colmcille. </string>
    <string name="castle_bawne_heading">Castle Bawne</string>
    <string name="castle_bawne_text">\nCastle Bawne was built around the 12th Century and was a fortress for the O\'Boyle clann. The O\'Boyles were driven out of Cloughaneely by a rival clann, the Mac Sweeney\'s of Doe in the late 14th century. The castle and surrounding land was granted to Captain Henry Harte for his loyalty to the crown during the Ulster Plantation. In 1633 the lands were sold to Wybrants Olphert, who renovated the castle and resided there until Ballyconnell House was built in 1763.\r\n\r\nFlax and corn were very important to Cloughaneely in the 19th century. The ruins of a flax mill can be seen next to the castle ruins. \r\n</string>
    <string name="castle_bawne_text_ga">\nTógadh Caisleán an Bhábhún thart fan 11ú aois agus bhí sé mar dhún chosanta ag Clann Uí Bhaoill go dtí gur chuir Clann Mhic Suibhne na dTuath an tóir orthú sa 13ú aois.  Tugadh an caisleán agus an talamh don Chaptaen Henry Harte sa bhliain 1611 le linn Plandáil Uladh. Dhíol seisean é le Wybrants Olphert. Chóirigh Wybrants an áit agus bhí cónaí ar na Olpherts ann go dtí an 18ú aois nuair a thóg siad Teach Bhaile Chonaill. \r\n\r\nBhí coirce agus lín iontach tabhachtach i gCloich Cheann Fhaola san 18ú aois. Tá ballaí an mhuilinn le feiceáil go fóill in aice an chaisleáin.</string>
    <string name="ards_forest_park_heading">Ards Forest Park</string>
    <string name="ards_forest_park_text">Ards Forest Park is situated on the N56, between Creeslough and Dunfanaghy in County Donegal. At Ards Forest Park there are a number of signposted walks incorporating the main features of the park. These include the Arts Heritage Trail which is 3.5km long, the nature trail and the green trail which are both 3km long and the Red Trail which is 13km long. This walk does incorporate some provision for shortcuts back to the starting point should the weather change.\r\n\r\nArds Forest Park is probably the most beautiful and varied of Ireland\'s forest parks. It is 480 hectares in extent and contains a large diversity of plant and wildlife forms. Sandy beaches, rivers, viewing points, nature walks, picnic and play areas. Hours can be spent here in complete relaxation, be it on the many nature walks or on its golden beaches. It is a place for everyone to get away for a while.\r\n\r\nArds Forest Park has many features of historical and archaeological interest. The remains of four ring forts are to be seen in the park as well as a number of megalithic tombs. On the same walk there is a Mass Rock where mass was celebrated in defiance of the penal laws. There are numerous viewing points on the walks and trails with spectacular views of the surrounding countryside.\r\n\r\nThere is also a car park and a children\'s play area.</string>
    <string name="ards_forest_park_text_ga"></string>
    <string name="glenveagh_national_park_heading">Glenveagh National Park</string>
    <string name="glenveagh_national_park_text">Set in some 16,500 hectares of County Donegal mountains, lakes, glens and woods, with a large herd of red deer, Glenveagh Castle is a 19th Century, castellated mansion built between 1867 and 1873. \r\n\r\nSurrounded by the famous Glenveagh Gardens, its construction in a remote mountain setting was inspired by the Victorian idyll of a romantic highland retreat. John Townsend Trench, a cousin of its builder and first owner, John George Adair, designed it. \r\n\r\nAccess to the castle is by guided tour only,(videos/cameras not permitted on tour). Maximum number for the 45 minute guided tour is twenty. \u201CGlenveagh\u201D a 35 minute audio-visual presentation, seats 90. Languages English, Irish, French, German and Italian. \r\n\r\nPease visit website for admission prices, facilities and all further details.</string>
    <string name="glenveagh_national_park_text_ga"></string>
</resources>