<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="paddy.mchugh.com.expandablelist2.cloughaneely_stone_activity">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgVcloughaneely_stone"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/cloughaneely_stone"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/cloughaneely_stone_heading"
        android:background="@color/material_blue_grey_800"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:id="@+id/cl_textview"
        android:gravity="center"

        android:layout_below="@+id/imgVcloughaneely_stone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/cloughaneely_stone_text"
        android:textSize="@dimen/text_size"
        android:id="@+id/textView2"
        android:layout_below="@+id/cl_textview"
        android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cloughaneely_stone_text_ga"
            android:textSize="@dimen/text_size"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>
</RelativeLayout>
