<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="paddy.mchugh.com.expandablelist2.activity_castle_bawne">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgVcastle_bawne"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/castle_bawne"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/castle_bawne_heading"
                android:background="@color/material_blue_grey_800"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                android:id="@+id/castle_bawne_textview"
                android:gravity="center"
                android:layout_below="@+id/imgVcastle_bawne"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/castle_bawne_text"
                android:id="@+id/castle_bawne_textview2"
                android:layout_below="@+id/castle_bawne_textview"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/castle_bawne_text_ga"
                android:id="@+id/castle_bawne_textview3"
                android:layout_below="@+id/castle_bawne_textview2"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size"/>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
