<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="paddy.mchugh.com.expandablelist2.glenveagh_national_park">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgVglenveagh_national_park"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/glenveagh"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/glenveagh_national_park_heading"
                android:background="#004225"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                android:id="@+id/glenveagh_national_park_textview"
                android:gravity="center"
                android:layout_below="@+id/imgVglenveagh_national_park"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/glenveagh_national_park_text"
                android:id="@+id/glenveagh_national_park_textview2"
                android:layout_below="@+id/glenveagh_national_park_textview"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/glenveagh_national_park_text_ga"
                android:id="@+id/glenveagh_national_park_textview3"
                android:layout_below="@+id/glenveagh_national_park_textview2"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size"/>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
